# python-timeout

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
libtimeout/: __init__.py  libtimeout.py
pyrtout/: __init__.py  exceptions.py  timeout.py
