[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-timeout"
version = "1.0.0"
authors = [
  { name="Arijit Roy", email="roy.arijit@icloud.com" },
]
description = "Timeout & retry functions in Python with a single line of codee"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/radioactive11/python-timeout"
"Bug Tracker" = "https://github.com/radioactive11/python-timeout/issues"