[metadata]
name = python-timeout-radioactive11
version = 1.0.0
author = Arijit Roy
author_email = roy.arijit@icloud.com
description = Timeout & retry functions in Python with a single line of code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/radioactive11/python-timeout
project_urls =
    Bug Tracker = https://github.com/radioactive11/python-timeout/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = libtimeout
packages = find:
python_requires = >=3.7

[options.packages.find]
where = libtimeout